--- a/GameEngineTutorial.vcxproj.filters
+++ b/GameEngineTutorial.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="GraphicEngine\Include\swap_chain.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="GraphicEngine\Include\model.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngineTutorial.cpp">
@@ -65,6 +68,9 @@
     <ClCompile Include="GraphicEngine\Source\swap_chain.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="GraphicEngine\Source\model.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameEngineTutorial.rc">
@@ -80,7 +86,7 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\simple_shader.vert" />
-    <None Include="shaders\simple_shader.frag" />
+    <CustomBuild Include="shaders\simple_shader.frag" />
+    <CustomBuild Include="shaders\simple_shader.vert" />
   </ItemGroup>
 </Project>
