--- a/GameEngineTutorial.vcxproj.filters
+++ b/GameEngineTutorial.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="GraphicEngine\Include\game_object.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="GraphicEngine\Include\renderer.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicEngine\Include\simple_render_system.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameEngineTutorial.cpp">
@@ -75,6 +81,12 @@
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="GraphicEngine\Source\game_object.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicEngine\Source\renderer.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphicEngine\Source\simple_render_system.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
